--- a/template.html
+++ b/template.html
@@ -9,9 +9,11 @@
 
     </div>
 
-    <script src="../vue.js"></script>
+    <script src="vue.js"></script>
     <script>
+        var app = new Vue ({
 
+        })
     </script>
 </body>
 </html>
