--- a/Part_5/5.3.2.1.html
+++ b/Part_5/5.3.2.1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>5.3.1.3</title>
+    <title>5.3.2.1</title>
 </head>
 <body>
 <div id="app">
@@ -21,19 +21,23 @@
         data: {
             books: [
                 {
-                    name: '《Vue.js》',
+                    name: '《Vue.javascript1》',
                     author: 'aaa'
                 },
                 {
-                    name: '《Vue.js》',
+                    name: '《Vue.js2》',
                     author: 'aaa'
                 },
                 {
-                    name: '《Vue.js》',
+                    name: '《Vue.js3》',
                     author: 'aaa'
                 }
             ]
         }
+    })
+
+    app.books = app.books.filter(function (item) {
+        return item.name.match(/js/);
     })
 </script>
 </body>
