--- a/Part_5/5.3.2.2.html
+++ b/Part_5/5.3.2.2.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>5.3.1.3</title>
+    <title>5.3.2.2</title>
 </head>
 <body>
 <div id="app">
     <ul>
-        <template v-for="book in books">
+        <template v-for="book in filterBooks">
             <li>书名： {{ book.name }}</li>
             <li>作者： {{ book.author }}</li>
         </template>
@@ -16,23 +16,30 @@
 
 <script src="../vue.js"></script>
 <script>
-    var app = new Vue ({
+    var app = new Vue({
         el: '#app',
         data: {
             books: [
                 {
-                    name: '《Vue.js》',
+                    name: '《Vue.javascript1》',
                     author: 'aaa'
                 },
                 {
-                    name: '《Vue.js》',
+                    name: '《Vue.js2》',
                     author: 'aaa'
                 },
                 {
-                    name: '《Vue.js》',
+                    name: '《Vue.js3》',
                     author: 'aaa'
                 }
             ]
+        },
+        computed: {
+            filterBooks: function () {
+                return this.books.filter(function (book) {
+                    return book.name.match(/js/);
+                })
+            }
         }
     })
 </script>
