--- a/Part_6/6.1.3.html
+++ b/Part_6/6.1.3.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>6.1.1</title>
+    <title>6.1.3</title>
 </head>
 <body>
     <div id="app">
-        <input type="text" v-model="message" placeholder="请输入。。。">
-        <p>你输入的内容是：{{ message }}</p>
+        <input type="radio" :checked="picked">
+        <lable>单选按钮</lable>
     </div>
 
     <script type="text/javascript" src="../vue.js"></script>
@@ -15,7 +15,7 @@
         var app = new Vue ({
             el: '#app',
             data: {
-                message: ''
+                picked: true
             }
         })
     </script>
